# NHL-Beyond-27

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  Makefile  README.md  align_age25_age29.py  another_try.py  another_try_pg2.py  build_player_five_year_aligned_cap.py  build_player_five_year_aligned_z.py  build_player_five_year_aligned_z_cohort.py  build_player_streaks_and_aligned.py  build_ref_hockey.py  config_helpers.py  constants.py  data_pipeline.py  data_processing_utils.py  db_utils.py  diff_players_by_season.py  download_ref_hockey.py  drop_goalies_inplace.py  ingest_peak_season.py  log_utils.py  nhl_beyond_2025-09-20_103341.dump  pyproject.toml  requirements.txt  s3_utils.py  scrap_player_caphit.py  scrape_player_caphit.py  scrape_team_payroll.py  scraping_utils.py  test_pps.py  test_script.py  time_utils.py  upload_ref_hockey.py  view_utils.py
.selenium_profile_stathead/: ChromeFeatureState  DevToolsActivePort  Last Version  Local State
backups/: nhl_beyond_2025-09-20_095011.dump  nhl_beyond_2025-09-20_095011.dump.sha256  nhl_beyond_2025-09-20_103038.dump  nhl_beyond_2025-09-20_103038.dump.sha256  nhl_beyond_2025-09-20_103341.dump.sha256  nhl_beyond_2025-09-20_144502.dump  nhl_beyond_2025-09-20_144502.dump.sha256
docs/: project-structure.mmd  project-structure.txt
nhl_player_seasons_data/: nhl_player_seasons_2013.csv  nhl_player_seasons_2014.csv  nhl_player_seasons_2015.csv  nhl_player_seasons_2016.csv  nhl_player_seasons_2017.csv  nhl_player_seasons_2018.csv  nhl_player_seasons_2019.csv  nhl_player_seasons_2020.csv  (+5 more)
(+625 files in other folders)
