[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhl-beyond27"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "SQLAlchemy>=2.0",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0",
  "boto3>=1.28",
  "pandas>=2.0"
]

[project.scripts]
nb27 = "nhl_beyond27.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
# Good default rule set (PEP8 + common quality checks)
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
# Let Black handle line wrapping; ignore E203 to match Black
ignore = ["E501", "E203"]

[tool.ruff.format]
# We're using Black for formatting, so keep Ruff formatter off (default).
